<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.RegistrarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="424dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutUserReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/ht_user"
                android:inputType="text"
                android:singleLine="true"></EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutcontraReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ht_contrasena">

            <EditText
                android:id="@+id/userReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/layoutcontra"
                android:inputType="text|textPassword"
                android:singleLine="true">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_style"
            android:textColor="@color/colorIcons"
            android:text="@string/btn_registrar" />

        <ProgressBar
            android:id="@+id/pb_registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:layout_centerHorizontal="true"/>
    </LinearLayout>


</FrameLayout>